# metrics-dashboard

./: flake.nix  pyproject.toml
src/metrics_dashboard/: __main__.py
